--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
 		</div>		
 	</div>
 	<div class="container">
-		<h1>Le Wagon</h1>
-		<h2>1. container</h2>
-
-		<h2>2. Avatar</h2>
-		<img class="avatar" src="images/jm.jpg" alt="foto de perfil">
-
-		<h2>3. btn</h2>
-		<a href="#Apply-section" class="btn-purple"> Suscribirse</a>
-
-		<h2>4. Card Campuses</h2>
+		<h2>Le Wagon Campuses</h2>
 		<div class="cards">
 			<div class="card">
 				<img src="images/paris.jpg" alt="Le wagon Paris">
